--- a/notebooks/2 - Get and Post API requests.ipynb
+++ b/notebooks/2 - Get and Post API requests.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a2397d62",
    "metadata": {},
    "outputs": [],
@@ -21,32 +21,21 @@
     "import pandas as pd\n",
     "import sys, json\n",
     "import os\n",
-    "import dotenv\n",
-    "import sqlalchemy as alch\n",
+    "# import dotenv\n",
+    "# import sqlalchemy as alch\n",
     "# import urllib.parse\n",
-    "from dotenv import load_dotenv\n",
+    "# from dotenv import load_dotenv\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "dbcc8808",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dotenv.load_dotenv()"
+    "# dotenv.load_dotenv()"
    ]
   },
   {
@@ -61,26 +50,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "408be50a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dbName = \"political_debates\""
+    "# dbName = \"political_debates\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2ed2a56f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# passw = os.getenv(\"passw_env\")\n",
-    "passw = \"admin\"\n",
-    "dbName=\"political_debates\"\n",
-    "connectionData=f\"mysql+pymysql://root:{passw}@localhost/{dbName}\"\n",
-    "engine = alch.create_engine(connectionData)\n"
+    "# # passw = os.getenv(\"passw_env\")\n",
+    "# passw = \"admin\"\n",
+    "# dbName=\"political_debates\"\n",
+    "# connectionData=f\"mysql+pymysql://root:{passw}@localhost/{dbName}\"\n",
+    "# engine = alch.create_engine(connectionData)\n"
    ]
   },
   {
@@ -101,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "2cb6d05a",
    "metadata": {},
    "outputs": [],
@@ -111,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "a9cdfa66",
    "metadata": {},
    "outputs": [],
@@ -121,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "373fd1fc",
    "metadata": {},
    "outputs": [],
@@ -131,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "d5e4e376",
    "metadata": {},
    "outputs": [
@@ -141,6 +130,7 @@
        "[{'sentenceid': 3,\n",
        "  'minute': 10140000,\n",
        "  'sentence': 'How you doing man',\n",
+       "  'tokens': \"It's not English or Spanish\",\n",
        "  'speakers_speakerid': 2,\n",
        "  'debate': 'us_election_2020_1st_presidential_debate',\n",
        "  'speakerid': 2,\n",
@@ -148,13 +138,14 @@
        " {'sentenceid': 5,\n",
        "  'minute': 10260000,\n",
        "  'sentence': 'Im well',\n",
+       "  'tokens': \"It's not English or Spanish\",\n",
        "  'speakers_speakerid': 2,\n",
        "  'debate': 'us_election_2020_1st_presidential_debate',\n",
        "  'speakerid': 2,\n",
        "  'speaker': 'Donald Trump'}]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e20689f6",
+   "id": "75ec6eeb",
    "metadata": {},
    "source": [
     "## POST REQUESTS"
@@ -173,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "dbb64315",
    "metadata": {},
    "outputs": [],
@@ -188,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f367755b",
    "metadata": {},
    "outputs": [],
@@ -203,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3164e122",
    "metadata": {},
    "outputs": [],
@@ -213,41 +204,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "35e2be44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "variable2 = requests.post(url2, data=complete_register2)"
+    "variable = requests.post(url2, data=register_2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "a4a2b0b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'error': 0,\n",
+       " 'msg': \"The register was uploaded successfully {'speaker': 'Donald Trump', 'minute': '01:10', 'sentence': 'I drink a lot of coke', 'debate': 'us_election_2020_1st_presidential_debate'}\"}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "variable2.json()"
+    "variable.json()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9638dbce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(variable2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e180b0c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
