--- a/notebooks/3 - NLP.ipynb
+++ b/notebooks/3 - NLP.ipynb
@@ -2,152 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a5430b84",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Libraries\n",
+    "\n",
     "import pandas as pd\n",
-    "import string\n",
-    "import en_core_web_sm\n",
-    "import spacy\n",
-    "from nltk.corpus import stopwords\n",
-    "from langdetect import detect\n",
-    "import re\n",
-    "import sqlalchemy as alch\n",
-    "from getpass import getpass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "781ea36b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "admin········\n"
-     ]
-    }
-   ],
-   "source": [
-    "password = getpass(\"admin\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "8e789fd2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db_name = \"political_debates\"\n",
-    "connectionData = f\"mysql+pymysql://root:{password}@localhost/{db_name}\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "2e258453",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connected to server!\n"
-     ]
-    }
-   ],
-   "source": [
-    "engine = alch.create_engine(connectionData)\n",
-    "print(\"Connected to server!\")"
+    "import requests\n",
+    "import sys, json\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efe90c28",
+   "id": "01b8c65b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = pd.read_sql_query(\"\"\"\n",
-    "SELECT artistas.nombre as artista, canciones.nombre as nombre, username as ironhacker, letra \n",
-    "FROM canciones\n",
-    "INNER JOIN artistas\n",
-    "ON artistas.idartista = canciones.artistas_idartista\n",
-    "INNER JOIN ironhackers\n",
-    "ON ironhackers.idironhacker = canciones.ironhackers_idironhacker\n",
-    "\"\"\", engine)"
+    "url = f\"http://127.0.0.1:5000/sentiment/\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abc00a97",
+   "id": "45da37c4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install spacy"
+    "variable2 = requests.get(url)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7427f210",
+   "id": "366f7167",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !python3 -m spacy download en_core_web_sm"
+    "variable2.json()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0b901f8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !python3 -m spacy download \"es_core_news_sm\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4bc8b946",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !pip install langdetect"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "96a85965",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nlp_es = spacy.load(\"es_core_news_sm\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "ecfdc7ab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nlp = spacy.load(\"en_core_web_sm\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1634625e",
+   "id": "4bd1b748",
    "metadata": {},
    "outputs": [],
    "source": []
