--- a/notebooks/1 - Kaggle data download, cleaning and Mysql upload.ipynb
+++ b/notebooks/1 - Kaggle data download, cleaning and Mysql upload.ipynb
@@ -55,17 +55,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "42e5912a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0.00/439M [00:00<?, ?B/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /Users/marialuisagomez/.kaggle/kaggle.json'\n",
+      "Downloading us-election-2020-presidential-debates.zip to /Users/marialuisagomez/Desktop/Ironhack/PROYECTOS/political_debates_sentiment_analysis/notebooks\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 439M/439M [02:39<00:00, 2.89MB/s] \n",
+      "x us_election_2020_1st_presidential_debate.csv\n",
+      "x us_election_2020_1st_presidential_debate.mp3"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "x us_election_2020_1st_presidential_debate.txt\n",
+      "x us_election_2020_2nd_presidential_debate.csv\n",
+      "x us_election_2020_2nd_presidential_debate.mp3\n",
+      "x us_election_2020_2nd_presidential_debate.txt\n",
+      "x us_election_2020_biden_town_hall.csv\n",
+      "x us_election_2020_biden_town_hall.mp3\n",
+      "x us_election_2020_biden_town_hall.txt\n",
+      "x us_election_2020_trump_town_hall.csv\n",
+      "x us_election_2020_trump_town_hall.mp3\n",
+      "x us_election_2020_trump_town_hall.txt\n",
+      "x us_election_2020_vice_presidential_debate.csv\n",
+      "x us_election_2020_vice_presidential_debate.mp3\n",
+      "x us_election_2020_vice_presidential_debate.txt\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 - Kaggle data download, cleaning and Mysql upload.ipynb\n",
+      "2 - Get and Post API requests.ipynb\n",
+      "3 - NLP.ipynb\n",
+      "us-election-2020-presidential-debates.zip\n",
+      "us_election_2020_1st_presidential_debate.csv\n",
+      "us_election_2020_1st_presidential_debate.mp3\n",
+      "us_election_2020_1st_presidential_debate.txt\n",
+      "us_election_2020_2nd_presidential_debate.csv\n",
+      "us_election_2020_2nd_presidential_debate.mp3\n",
+      "us_election_2020_2nd_presidential_debate.txt\n",
+      "us_election_2020_biden_town_hall.csv\n",
+      "us_election_2020_biden_town_hall.mp3\n",
+      "us_election_2020_biden_town_hall.txt\n",
+      "us_election_2020_trump_town_hall.csv\n",
+      "us_election_2020_trump_town_hall.mp3\n",
+      "us_election_2020_trump_town_hall.txt\n",
+      "us_election_2020_vice_presidential_debate.csv\n",
+      "us_election_2020_vice_presidential_debate.mp3\n",
+      "us_election_2020_vice_presidential_debate.txt\n",
+      "enter name of the file you want to keep:us_election_2020_1st_presidential_debate.csv\n"
+     ]
+    }
+   ],
    "source": [
     "kdf.import_kaggle_data(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "708323d5",
    "metadata": {},
    "outputs": [],
@@ -75,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "f50ef2e6",
    "metadata": {},
    "outputs": [],
@@ -85,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "fb69e45a",
    "metadata": {},
    "outputs": [
@@ -131,66 +210,32 @@
        "      <td>This debate is being conducted under health an...</td>\n",
        "      <td>us_election_2020_1st_presidential_debate</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Vice President Joe Biden</td>\n",
-       "      <td>02:49</td>\n",
-       "      <td>How you doing, man?</td>\n",
-       "      <td>us_election_2020_1st_presidential_debate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>President Donald J. Trump</td>\n",
-       "      <td>02:51</td>\n",
-       "      <td>How are you doing?</td>\n",
-       "      <td>us_election_2020_1st_presidential_debate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Vice President Joe Biden</td>\n",
-       "      <td>02:51</td>\n",
-       "      <td>I’m well.</td>\n",
-       "      <td>us_election_2020_1st_presidential_debate</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     speaker minute  \\\n",
-       "0              Chris Wallace  01:20   \n",
-       "1              Chris Wallace  02:10   \n",
-       "2   Vice President Joe Biden  02:49   \n",
-       "3  President Donald J. Trump  02:51   \n",
-       "4   Vice President Joe Biden  02:51   \n",
-       "\n",
-       "                                                text  \\\n",
-       "0  Good evening from the Health Education Campus ...   \n",
-       "1  This debate is being conducted under health an...   \n",
-       "2                                How you doing, man?   \n",
-       "3                                 How are you doing?   \n",
-       "4                                          I’m well.   \n",
+       "         speaker minute                                               text  \\\n",
+       "0  Chris Wallace  01:20  Good evening from the Health Education Campus ...   \n",
+       "1  Chris Wallace  02:10  This debate is being conducted under health an...   \n",
        "\n",
        "                                     debate  \n",
        "0  us_election_2020_1st_presidential_debate  \n",
-       "1  us_election_2020_1st_presidential_debate  \n",
-       "2  us_election_2020_1st_presidential_debate  \n",
-       "3  us_election_2020_1st_presidential_debate  \n",
-       "4  us_election_2020_1st_presidential_debate  "
+       "1  us_election_2020_1st_presidential_debate  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_debate1.head()"
+    "df_debate1.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "c8af0d90",
    "metadata": {},
    "outputs": [
@@ -200,7 +245,7 @@
        "(789, 4)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "83274e54",
    "metadata": {},
    "outputs": [
@@ -247,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "893b786b",
    "metadata": {},
    "outputs": [],
@@ -261,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "9798c9dd",
    "metadata": {},
    "outputs": [],
@@ -271,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "1ce6d57c",
    "metadata": {},
    "outputs": [],
@@ -281,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "e3926542",
    "metadata": {},
    "outputs": [
@@ -291,7 +336,7 @@
        "array(['Chris Wallace', 'Joe Biden', 'Donald Trump'], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "8572d0a9",
    "metadata": {},
    "outputs": [],
@@ -314,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "a8839178",
    "metadata": {},
    "outputs": [],
@@ -328,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "8ea5b743",
    "metadata": {},
    "outputs": [],
@@ -340,7 +385,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
+   "id": "51c88962",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create tokens column\n",
+    "df_debate1[\"tokens\"] = df_debate1.text.apply(kdf.tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "1708de79",
    "metadata": {},
    "outputs": [],
@@ -352,28 +408,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "41422dae",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>speaker</th>\n",
+       "      <th>speaker_id</th>\n",
+       "      <th>minute</th>\n",
+       "      <th>text</th>\n",
+       "      <th>sentence_id</th>\n",
+       "      <th>debate</th>\n",
+       "      <th>tokens</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Chris Wallace</td>\n",
+       "      <td>1</td>\n",
+       "      <td>01:20</td>\n",
+       "      <td>Good evening from the Health Education Campus ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>us_election_2020_1st_presidential_debate</td>\n",
+       "      <td>good evening health education campus case west...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Chris Wallace</td>\n",
+       "      <td>1</td>\n",
+       "      <td>02:10</td>\n",
+       "      <td>This debate is being conducted under health an...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>us_election_2020_1st_presidential_debate</td>\n",
+       "      <td>debate conduct health safety protocol design c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Joe Biden</td>\n",
+       "      <td>2</td>\n",
+       "      <td>02:49</td>\n",
+       "      <td>How you doing man</td>\n",
+       "      <td>3</td>\n",
+       "      <td>us_election_2020_1st_presidential_debate</td>\n",
+       "      <td>It's not English or Spanish</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Donald Trump</td>\n",
+       "      <td>3</td>\n",
+       "      <td>02:51</td>\n",
+       "      <td>How are you doing</td>\n",
+       "      <td>4</td>\n",
+       "      <td>us_election_2020_1st_presidential_debate</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Joe Biden</td>\n",
+       "      <td>2</td>\n",
+       "      <td>02:51</td>\n",
+       "      <td>Im well</td>\n",
+       "      <td>5</td>\n",
+       "      <td>us_election_2020_1st_presidential_debate</td>\n",
+       "      <td>It's not English or Spanish</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(788, 6)"
+       "         speaker  speaker_id minute  \\\n",
+       "0  Chris Wallace           1  01:20   \n",
+       "1  Chris Wallace           1  02:10   \n",
+       "2      Joe Biden           2  02:49   \n",
+       "3   Donald Trump           3  02:51   \n",
+       "4      Joe Biden           2  02:51   \n",
+       "\n",
+       "                                                text  sentence_id  \\\n",
+       "0  Good evening from the Health Education Campus ...            1   \n",
+       "1  This debate is being conducted under health an...            2   \n",
+       "2                                  How you doing man            3   \n",
+       "3                                  How are you doing            4   \n",
+       "4                                            Im well            5   \n",
+       "\n",
+       "                                     debate  \\\n",
+       "0  us_election_2020_1st_presidential_debate   \n",
+       "1  us_election_2020_1st_presidential_debate   \n",
+       "2  us_election_2020_1st_presidential_debate   \n",
+       "3  us_election_2020_1st_presidential_debate   \n",
+       "4  us_election_2020_1st_presidential_debate   \n",
+       "\n",
+       "                                              tokens  \n",
+       "0  good evening health education campus case west...  \n",
+       "1  debate conduct health safety protocol design c...  \n",
+       "2                        It's not English or Spanish  \n",
+       "3                                                     \n",
+       "4                        It's not English or Spanish  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_debate1.shape"
+    "df_debate1.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "e8aa3873",
    "metadata": {},
    "outputs": [],
@@ -392,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "fb1ddeef",
    "metadata": {},
    "outputs": [],
@@ -402,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "f87fc916",
    "metadata": {},
    "outputs": [
@@ -420,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "23fe0207",
    "metadata": {},
    "outputs": [],
@@ -431,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "886faac0",
    "metadata": {},
    "outputs": [
@@ -450,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "5f6aa772",
    "metadata": {},
    "outputs": [],
@@ -471,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "081de5ae",
    "metadata": {},
    "outputs": [],
@@ -482,8 +647,8 @@
     "    try:\n",
     "        engine.execute(\n",
     "        f\"\"\"\n",
-    "        INSERT INTO speeches (sentenceid, minute, sentence, speakers_speakerid, debate) VALUES\n",
-    "        ({fila['sentence_id']},\"{fila['minute']}\",\"{fila['text']}\", \"{fila['speaker_id']}\", \"{fila['debate']}\");\n",
+    "        INSERT INTO speeches (sentenceid, minute, sentence, tokens, speakers_speakerid, debate) VALUES\n",
+    "        ({fila['sentence_id']},\"{fila['minute']}\",\"{fila['text']}\",\"{fila['tokens']}\", \"{fila['speaker_id']}\", \"{fila['debate']}\");\n",
     "       \"\"\"\n",
     "        )\n",
     "    except Exception as e:\n",
@@ -492,6 +657,14 @@
     "        print(e)\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c5db58e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
