--- a/notebooks/2 - Get and Post API requests.ipynb
+++ b/notebooks/2 - Get and Post API requests.ipynb
@@ -20,56 +20,7 @@
     "import requests\n",
     "import pandas as pd\n",
     "import sys, json\n",
-    "import os\n",
-    "# import dotenv\n",
-    "# import sqlalchemy as alch\n",
-    "# import urllib.parse\n",
-    "# from dotenv import load_dotenv\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dbcc8808",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dotenv.load_dotenv()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d44be2e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# passw_env = os.getenv(\"pass_sql\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "408be50a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dbName = \"political_debates\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ed2a56f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # passw = os.getenv(\"passw_env\")\n",
-    "# passw = \"admin\"\n",
-    "# dbName=\"political_debates\"\n",
-    "# connectionData=f\"mysql+pymysql://root:{passw}@localhost/{dbName}\"\n",
-    "# engine = alch.create_engine(connectionData)\n"
+    "import os\n"
    ]
   },
   {
@@ -160,6 +111,14 @@
    "metadata": {},
    "source": [
     "## POST REQUESTS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96df43aa",
+   "metadata": {},
+   "source": [
+    "#### API user adds new registers to political_debates database"
    ]
   },
   {
