--- a/notebooks/3 - NLP.ipynb
+++ b/notebooks/3 - NLP.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7cb1de21",
+   "metadata": {},
+   "source": [
+    "# Queries for sentiment analysis"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a5430b84",
    "metadata": {},
    "outputs": [],
@@ -11,13 +19,20 @@
     "\n",
     "import pandas as pd\n",
     "import requests\n",
-    "import sys, json\n",
-    "\n"
+    "import sys, json\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "604dbb35",
+   "metadata": {},
+   "source": [
+    "#### Sentiment query for all politicians"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "01b8c65b",
    "metadata": {},
    "outputs": [],
@@ -27,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "45da37c4",
    "metadata": {},
    "outputs": [],
@@ -37,18 +52,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "366f7167",
+   "execution_count": 12,
+   "id": "de8b251f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'speaker': 'Joe Biden',\n",
+       "  'speakerid': 1,\n",
+       "  'minute': 4800000,\n",
+       "  'sentence': 'Good evening from the Health Education Campus of Case Western Reserve University and the Cleveland Clinic Im Chris Wallace of Fox News and I welcome you to the first of the 2020 Presidential Debates between President Donald J Trump and former Vice President Joe Biden This debate is sponsored by the Commission on Presidential debates The Commission has designed the format six roughly 15 minute segments with two minute answers from each candidate to the first question then open discussion for the rest of each segment Both campaigns have agreed to these rules For the record I decided the topics and the questions in each topic I can assure you none of the questions has been shared with the Commission or the two candidates',\n",
+       "  'tokens': 'good evening health education campus case western reserve university cleveland clinic m chris wallace fox news welcome presidential debates president donald j trump vice president joe biden debate sponsor commission presidential debate commission design format roughly minute segment minute answer candidate question open discussion rest segment campaign agree rule record decide topic question topic assure question share commission candidate',\n",
+       "  'speakers_speakerid': 1,\n",
+       "  'debate': 'us_election_2020_1st_presidential_debate',\n",
+       "  'polarity': 0.9001},\n",
+       " {'speaker': 'Joe Biden',\n",
+       "  'speakerid': 1,\n",
+       "  'minute': 7800000,\n",
+       "  'sentence': 'This debate is being conducted under health and safety protocols designed by the Cleveland Clinic which is serving as the Health Security advisor to the Commission for all four debates As a precaution both campaigns have agreed the candidates will not shake hands at the beginning of tonights debate The audience here in the hall has promised to remain silent No cheers no boos or other interruptions so we and more importantly you can focus on what the candidates have to say No noise except right now as we welcome the Republican nominee President Trump and the Democratic nominee Vice President Biden',\n",
+       "  'tokens': 'debate conduct health safety protocol design cleveland clinic serve health security advisor commission debate precaution campaign agree candidate shake hand beginning tonight debate audience hall promise remain silent cheer boo interruption importantly focus candidate noise right welcome republican nominee president trump democratic nominee vice president biden',\n",
+       "  'speakers_speakerid': 1,\n",
+       "  'debate': 'us_election_2020_1st_presidential_debate',\n",
+       "  'polarity': 0.9485},\n",
+       " {'speaker': 'Joe Biden',\n",
+       "  'speakerid': 1,\n",
+       "  'minute': 11460000,\n",
+       "  'sentence': 'Gentlemen a lot of people been waiting for this night so lets get going Our first subject is the Supreme Court President Trump you nominated Amy Coney Barrett over the weekend to succeed the late Ruth Bader Ginsburg on the Court You say the Constitution is clear about your obligation and the Senates to consider a nominee to the Court Vice President Biden you say that this is an effort by the President and Republicans to jam through on an appointment in what you call an abuse of power My first question to both of you tonight why are you right in the argument you make and your opponent wrong And where do you think a Justice Barrett would take the court President Trump in this first segment you go first Two minutes',\n",
+       "  'tokens': 'gentleman lot people wait night let go subject supreme court president trump nominate amy coney barrett weekend succeed late ruth bader ginsburg court constitution clear obligation senates consider nominee court vice president biden effort president republicans jam appointment abuse power question tonight right argument opponent wrong think justice barrett court president trump segment minute',\n",
+       "  'speakers_speakerid': 1,\n",
+       "  'debate': 'us_election_2020_1st_presidential_debate',\n",
+       "  'polarity': 0.4588}]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variable2.json()[:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a70e2fe7",
+   "metadata": {},
+   "source": [
+    "#### Sentiment query for a specific politician"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0f179271",
    "metadata": {},
    "outputs": [],
    "source": [
-    "variable2.json()"
+    "speaker = \"Joe Biden\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0cbf63fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url2 = f\"http://127.0.0.1:5000/sentiment/{speaker}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fd6d4764",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variable3 = requests.get(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8087a39a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'speaker': 'Joe Biden',\n",
+       "  'speakerid': 1,\n",
+       "  'minute': 4800000,\n",
+       "  'sentence': 'Good evening from the Health Education Campus of Case Western Reserve University and the Cleveland Clinic Im Chris Wallace of Fox News and I welcome you to the first of the 2020 Presidential Debates between President Donald J Trump and former Vice President Joe Biden This debate is sponsored by the Commission on Presidential debates The Commission has designed the format six roughly 15 minute segments with two minute answers from each candidate to the first question then open discussion for the rest of each segment Both campaigns have agreed to these rules For the record I decided the topics and the questions in each topic I can assure you none of the questions has been shared with the Commission or the two candidates',\n",
+       "  'tokens': 'good evening health education campus case western reserve university cleveland clinic m chris wallace fox news welcome presidential debates president donald j trump vice president joe biden debate sponsor commission presidential debate commission design format roughly minute segment minute answer candidate question open discussion rest segment campaign agree rule record decide topic question topic assure question share commission candidate',\n",
+       "  'speakers_speakerid': 1,\n",
+       "  'debate': 'us_election_2020_1st_presidential_debate',\n",
+       "  'polarity': 0.9001},\n",
+       " {'speaker': 'Joe Biden',\n",
+       "  'speakerid': 1,\n",
+       "  'minute': 7800000,\n",
+       "  'sentence': 'This debate is being conducted under health and safety protocols designed by the Cleveland Clinic which is serving as the Health Security advisor to the Commission for all four debates As a precaution both campaigns have agreed the candidates will not shake hands at the beginning of tonights debate The audience here in the hall has promised to remain silent No cheers no boos or other interruptions so we and more importantly you can focus on what the candidates have to say No noise except right now as we welcome the Republican nominee President Trump and the Democratic nominee Vice President Biden',\n",
+       "  'tokens': 'debate conduct health safety protocol design cleveland clinic serve health security advisor commission debate precaution campaign agree candidate shake hand beginning tonight debate audience hall promise remain silent cheer boo interruption importantly focus candidate noise right welcome republican nominee president trump democratic nominee vice president biden',\n",
+       "  'speakers_speakerid': 1,\n",
+       "  'debate': 'us_election_2020_1st_presidential_debate',\n",
+       "  'polarity': 0.9485},\n",
+       " {'speaker': 'Joe Biden',\n",
+       "  'speakerid': 1,\n",
+       "  'minute': 11460000,\n",
+       "  'sentence': 'Gentlemen a lot of people been waiting for this night so lets get going Our first subject is the Supreme Court President Trump you nominated Amy Coney Barrett over the weekend to succeed the late Ruth Bader Ginsburg on the Court You say the Constitution is clear about your obligation and the Senates to consider a nominee to the Court Vice President Biden you say that this is an effort by the President and Republicans to jam through on an appointment in what you call an abuse of power My first question to both of you tonight why are you right in the argument you make and your opponent wrong And where do you think a Justice Barrett would take the court President Trump in this first segment you go first Two minutes',\n",
+       "  'tokens': 'gentleman lot people wait night let go subject supreme court president trump nominate amy coney barrett weekend succeed late ruth bader ginsburg court constitution clear obligation senates consider nominee court vice president biden effort president republicans jam appointment abuse power question tonight right argument opponent wrong think justice barrett court president trump segment minute',\n",
+       "  'speakers_speakerid': 1,\n",
+       "  'debate': 'us_election_2020_1st_presidential_debate',\n",
+       "  'polarity': 0.4588}]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variable3.json()[:3]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bd1b748",
+   "id": "eabcd870",
    "metadata": {},
    "outputs": [],
    "source": []
