--- a/notebooks/3 - NLP.ipynb
+++ b/notebooks/3 - NLP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7cb1de21",
+   "id": "e2151707",
    "metadata": {},
    "source": [
     "# Queries for sentiment analysis"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "a5430b84",
    "metadata": {},
    "outputs": [],
@@ -19,12 +19,17 @@
     "\n",
     "import pandas as pd\n",
     "import requests\n",
-    "import sys, json\n"
+    "import sys, json\n",
+    "from pandas import json_normalize\n",
+    "\n",
+    "# from wordcloud import WordCloud\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# %matplotlib inline"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "604dbb35",
+   "id": "3d606532",
    "metadata": {},
    "source": [
     "#### Sentiment query for all politicians"
@@ -32,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "01b8c65b",
    "metadata": {},
    "outputs": [],
@@ -42,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "45da37c4",
    "metadata": {},
    "outputs": [],
@@ -52,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "de8b251f",
+   "execution_count": 6,
+   "id": "d06a9c3b",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +90,7 @@
        "  'polarity': 0.4588}]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a70e2fe7",
+   "id": "7e6968f6",
    "metadata": {},
    "source": [
     "#### Sentiment query for a specific politician"
@@ -104,8 +109,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "0f179271",
+   "execution_count": 7,
+   "id": "eff2903c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,8 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "0cbf63fc",
+   "execution_count": 8,
+   "id": "b11a3c02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,8 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "fd6d4764",
+   "execution_count": 9,
+   "id": "b7ff0114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,8 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "8087a39a",
+   "execution_count": 10,
+   "id": "8817b980",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +172,7 @@
        "  'polarity': 0.4588}]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,8 +183,232 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "818e2dc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = variable3.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8213cdd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = json_normalize(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "503f218f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>speaker</th>\n",
+       "      <th>speakerid</th>\n",
+       "      <th>minute</th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>tokens</th>\n",
+       "      <th>speakers_speakerid</th>\n",
+       "      <th>debate</th>\n",
+       "      <th>polarity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Joe Biden</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4800000</td>\n",
+       "      <td>Good evening from the Health Education Campus ...</td>\n",
+       "      <td>good evening health education campus case west...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>us_election_2020_1st_presidential_debate</td>\n",
+       "      <td>0.9001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Joe Biden</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7800000</td>\n",
+       "      <td>This debate is being conducted under health an...</td>\n",
+       "      <td>debate conduct health safety protocol design c...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>us_election_2020_1st_presidential_debate</td>\n",
+       "      <td>0.9485</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     speaker  speakerid   minute  \\\n",
+       "0  Joe Biden          1  4800000   \n",
+       "1  Joe Biden          1  7800000   \n",
+       "\n",
+       "                                            sentence  \\\n",
+       "0  Good evening from the Health Education Campus ...   \n",
+       "1  This debate is being conducted under health an...   \n",
+       "\n",
+       "                                              tokens  speakers_speakerid  \\\n",
+       "0  good evening health education campus case west...                   1   \n",
+       "1  debate conduct health safety protocol design c...                   1   \n",
+       "\n",
+       "                                     debate  polarity  \n",
+       "0  us_election_2020_1st_presidential_debate    0.9001  \n",
+       "1  us_election_2020_1st_presidential_debate    0.9485  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5683e78c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>speaker</th>\n",
+       "      <th>polarity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Chris Wallace</td>\n",
+       "      <td>0.019083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Joe Biden</td>\n",
+       "      <td>0.082852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Donald Trump</td>\n",
+       "      <td>0.088560</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         speaker  polarity\n",
+       "0  Chris Wallace  0.019083\n",
+       "1      Joe Biden  0.082852\n",
+       "2   Donald Trump  0.088560"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_up = df.groupby([\"speaker\"])[\"polarity\"].mean().sort_values().to_frame().reset_index()\n",
+    "sum_up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "25110a0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_allspeakers = variable2.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7203242d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = json_normalize(results_allspeakers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a785765",
+   "metadata": {},
+   "source": [
+    "### WordClouds (error when installing WordClouds)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "eabcd870",
+   "id": "17237f2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def wordcloud_df(df, col):\n",
+    "#     wordcloud = WordCloud(width=1600,height=400).generate(\" \".join([e for e in df[col]]))\n",
+    "#     plt.figure(figsize=(15,10), facecolor=\"k\")\n",
+    "#     plt.imshow(wordcloud)\n",
+    "#     plt.axis(\"off\")\n",
+    "#     plt.tight_layout(pad=0)\n",
+    "#     plt.savefig('images/wordcloud.png', facecolor='k', bbox_inches='tight')\n",
+    "#     plt.show();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "617353ca",
    "metadata": {},
    "outputs": [],
    "source": []
